new rules in htaccess

--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,4 +1,10 @@
- <files *.ini>
+RewriteEngine On
+RewriteBase /api/
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule . index.php
+
+<files *.ini>
   order deny,allow
   deny from all
 </files>
